--- a/server/framework/pom.xml
+++ b/server/framework/pom.xml
@@ -11,5 +11,19 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>framework</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
