修改 修复警告 添加spring-boot-admin

--- a/server/console/pom.xml
+++ b/server/console/pom.xml
@@ -23,5 +23,19 @@
             <groupId>com.za.fixtools</groupId>
             <version>${fixtool.server.framework.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.1.17</version>
+        </dependency>
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-starter-client</artifactId>
+        </dependency>
+        <!--jmx依赖-->
+        <dependency>
+            <groupId>org.jolokia</groupId>
+            <artifactId>jolokia-core</artifactId>
+        </dependency>
     </dependencies>
 </project>
