--- a/micro/pom.xml
+++ b/micro/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>eureka</module>
         <module>gateway</module>
+        <module>spring-boot-admin</module>
     </modules>
 
 </project>
