--- a/server/console/src/main/resources/application-dev.yml
+++ b/server/console/src/main/resources/application-dev.yml
@@ -4,7 +4,9 @@ server:
 spring:
   application:
     name: console-server
+    index: 1
   datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
     host: 127.0.0.1
     db: console
@@ -38,7 +40,17 @@ spring:
         min-idle: 1
         max-active: 1000
         max-wait: -1
+  boot:
+    admin:
+      client:
+        url: http://localhost:7751
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+          enabled: "*"
 cache:
   use2L: false
   multi:
