--- a/server/pom.xml
+++ b/server/pom.xml
@@ -111,5 +111,13 @@
         </dependency>
 
     </dependencies>
-
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>de.codecentric</groupId>
+                <artifactId>spring-boot-admin-starter-client</artifactId>
+                <version>2.1.5</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
