--- a/common/pom.xml
+++ b/common/pom.xml
@@ -6,14 +6,13 @@
         <artifactId>fixtools</artifactId>
         <groupId>com.za.fixtools</groupId>
         <version>${fixtool.version}</version>
+        <relativePath>../</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>common</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
-
     <dependencies>
-
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
