--- a/micro/eureka/pom.xml
+++ b/micro/eureka/pom.xml
@@ -6,11 +6,10 @@
         <artifactId>micro</artifactId>
         <groupId>com.za.fixtools</groupId>
         <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>eureka</artifactId>
-
     <dependencies>
 
         <dependency>
