--- a/micro/gateway/src/main/resources/application-dev.yml
+++ b/micro/gateway/src/main/resources/application-dev.yml
@@ -1,13 +1,7 @@
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:7761/eureka/
 server:
   port: 7771
 
 spring:
-  application:
-    name: gateway
   cloud:
     gateway:
       enabled: true
@@ -22,6 +16,22 @@ spring:
         locator:
           enabled: true
           lower-case-service-id: true
+
+      default-filters:
+        # 熔断降级配置
+        - name: Hystrix
+          args:
+            name: default
+            fallbackUri: 'forward:/defaultfallback'
+        # redis限流 ， filter名称必须是RequestRateLimiter
+#        - name: RequestRateLimiter
+#          args:
+#            # 使用SpEL名称引用Bean，与新建的RateLimiterConfig类中的bean的name相同
+#            key-resolver: '#{@remoteAddrKeyResolver}'
+#            # 每秒最大访问次数
+#            redis-rate-limiter.replenishRate: 20
+#            # 令牌桶最大容量
+#            redis-rate-limiter.burstCapacity: 20
   cache:
     ehcache:
       config: classpath:cache/ehcache.xml
@@ -31,6 +41,43 @@ spring:
   sleuth:
     sampler:
       probability: 1.0 # 0到1之间，1表示全部采样
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    jedis:
+      pool:
+        max-idle: 100
+        min-idle: 1
+        max-active: 1000
+        max-wait: -1
+
+# hystrix 信号量隔离，30秒后自动超时
+hystrix:
+  command:
+    default:
+      execution:
+        isolation:
+          strategy: SEMAPHORE
+          thread:
+            timeoutInMilliseconds: 30000
+  shareSecurityContext: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*" #暴露所有节点
+  endpoint:
+    health:
+      show-details: ALWAYS  #显示详细信息
+
+# 服务注册中心
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:7761/eureka/
+
+# 服务调用熔断
 feign:
   hystrix:
     enabled: true
