--- a/micro/pom.xml
+++ b/micro/pom.xml
@@ -6,9 +6,10 @@
         <artifactId>fixtools</artifactId>
         <groupId>com.za.fixtools</groupId>
         <version>${fixtool.version}</version>
+        <relativePath>../</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <version>0.0.1-SNAPSHOT</version>
     <artifactId>micro</artifactId>
     <packaging>pom</packaging>
 
