--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
     <artifactId>fixtools</artifactId>
     <version>${fixtool.version}</version>
     <packaging>pom</packaging>
-
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -73,7 +72,11 @@
                 <artifactId>swagger-bootstrap-ui</artifactId>
                 <version>1.6</version>
             </dependency>
+            <dependency>
+                <groupId>de.codecentric</groupId>
+                <artifactId>spring-boot-admin-starter-client</artifactId>
+                <version>2.1.5</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
-
 </project>
