--- a/server/console/src/main/resources/application-dev.yml
+++ b/server/console/src/main/resources/application-dev.yml
@@ -2,9 +2,6 @@ server:
   port: 7005
 
 spring:
-  application:
-    name: console-server
-    index: 1
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -24,6 +21,7 @@ spring:
     time-zone: GMT+8
   zipkin:
     base-url: http://localhost:9411/
+    enabled: true
   sleuth:
     sampler:
       probability: 1.0 # 0到1之间，1表示全部采样
@@ -40,17 +38,30 @@ spring:
         min-idle: 1
         max-active: 1000
         max-wait: -1
-  boot:
-    admin:
-      client:
-        url: http://localhost:7751
 
 management:
   endpoints:
     web:
       exposure:
-        include:
-          enabled: "*"
+        include: "*" #暴露所有节点
+  endpoint:
+    health:
+      show-details: ALWAYS  #显示详细信息
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:7761/eureka/
+
+feign:
+  hystrix:
+    enabled: false
+
+# start self define
+
+swagger:
+  enable: true
+
 cache:
   use2L: false
   multi:
@@ -62,14 +73,4 @@ cache:
     ehcache:
       config: classpath:cache/ehcache.xml
 
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:7761/eureka/
-
-feign:
-  hystrix:
-    enabled: true
-
-swagger:
-  enable: true
+# end self define
