修改 优化警告 首页添加log显示 添加权限资源功能 PO添加审计信息

--- a/micro/gateway/src/main/resources/application-dev.yml
+++ b/micro/gateway/src/main/resources/application-dev.yml
@@ -70,6 +70,8 @@ management:
   endpoint:
     health:
       show-details: ALWAYS  #显示详细信息
+  server:
+    port: 7772 #使用其他端口，生产环境端口权限进行限制
 
 # 服务注册中心
 eureka:
