--- a/server/console/pom.xml
+++ b/server/console/pom.xml
@@ -39,5 +39,11 @@
             <version>5.1.5.RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.3.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
