--- a/server/console/src/main/resources/application-dev.yml
+++ b/server/console/src/main/resources/application-dev.yml
@@ -10,6 +10,8 @@ spring:
     url: jdbc:mysql://${spring.datasource.host}:3306/${spring.datasource.db}?characterEncoding=utf-8&serverTimezone=GMT&useSSL=false
     username: root
     password: 123
+    druid:
+      enable-monitor: false
   jpa:
     hibernate:
       naming:
