--- a/server/console/src/main/resources/application-dev.yml
+++ b/server/console/src/main/resources/application-dev.yml
@@ -11,7 +11,7 @@ spring:
     username: root
     password: 123
     druid:
-      enable-monitor: false
+      enable-monitor: true
   jpa:
     hibernate:
       naming:
