--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.za.fixtools</groupId>
     <artifactId>fixtools</artifactId>
-    <version>${fixtool.version}</version>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -19,7 +19,6 @@
         <spring-cloud.version>Greenwich.SR1</spring-cloud.version>
         <guava.version>27.0.1-jre</guava.version>
         <springfox-swagger2.version>2.7.0</springfox-swagger2.version>
-        <fixtool.version>0.0.1-SNAPSHOT</fixtool.version>
     </properties>
 
     <modules>
@@ -53,6 +52,12 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
