--- a/server/framework/pom.xml
+++ b/server/framework/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <artifactId>server</artifactId>
         <groupId>com.za.fixtools</groupId>
-        <version>${fixtool.server.version}</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <version>${fixtool.server.framework.version}</version>
+    <version>0.0.1-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>framework</artifactId>
-
+    <packaging>jar</packaging>
     <dependencies>
         <dependency>
             <groupId>net.sf.ehcache</groupId>
