--- a/server/pom.xml
+++ b/server/pom.xml
@@ -5,23 +5,17 @@
     <parent>
         <artifactId>fixtools</artifactId>
         <groupId>com.za.fixtools</groupId>
-        <version>${fixtool.version}</version>
-        <relativePath>../</relativePath>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>server</artifactId>
     <packaging>pom</packaging>
-    <version>${fixtool.server.version}</version>
+    <version>0.0.1-SNAPSHOT</version>
 
     <modules>
         <module>console</module>
         <module>framework</module>
     </modules>
-
-    <properties>
-        <fixtool.server.version>0.0.1-SNAPSHOT</fixtool.server.version>
-        <fixtool.server.framework.version>0.0.1-SNAPSHOT</fixtool.server.framework.version>
-    </properties>
 
     <dependencies>
         <dependency>
@@ -45,7 +39,6 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>${guava.version}</version>
         </dependency>
 
         <dependency>
