--- a/micro/spring-boot-admin/pom.xml
+++ b/micro/spring-boot-admin/pom.xml
@@ -43,4 +43,28 @@
             <artifactId>hazelcast</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <finalName>${project.artifactId}-${project.version}</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                            <goal>build-info</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>com.za.springBootAdmin.SpringBootAdminApplication</mainClass>
+                    <addResources>false</addResources>
+                    <outputDirectory>../../StartupFile</outputDirectory>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
